--- a/bakhroush_custom_report/report/delivery_report.xml
+++ b/bakhroush_custom_report/report/delivery_report.xml
@@ -3,9 +3,9 @@
     <record id="paperformat_bakhroush_1" model="report.paperformat">
         <field name="name">Paperformat Bakhroush 1</field>
         <field name="default" eval="False"/>
-        <field name="format">custom</field>
-        <field name="page_height">140</field>
-        <field name="page_width">218</field>
+        <field name="format">A4</field>
+<!--        <field name="page_height">140</field>-->
+<!--        <field name="page_width">240</field>-->
         <field name="orientation">Portrait</field>
         <field name="margin_top">9</field>
         <field name="margin_bottom">20</field>
