--- a/bakhroush_custom_report/report/delivery_report.xml
+++ b/bakhroush_custom_report/report/delivery_report.xml
@@ -3,16 +3,14 @@
     <record id="paperformat_bakhroush_1" model="report.paperformat">
         <field name="name">Paperformat Bakhroush 1</field>
         <field name="default" eval="False"/>
-        <field name="format">A4</field>
-        <field name="page_height">0</field>
-        <field name="page_width">0</field>
-<!--        <field name="page_height">140</field>-->
-<!--        <field name="page_width">240</field>-->
+        <field name="format">custom</field>
+        <field name="page_height">140</field>
+        <field name="page_width">240</field>
         <field name="orientation">Portrait</field>
-        <field name="margin_top">9</field>
+        <field name="margin_top">14</field>
         <field name="margin_bottom">20</field>
-        <field name="margin_left">.5</field>
-        <field name="margin_right">.5</field>
+        <field name="margin_left">0</field>
+        <field name="margin_right">0</field>
         <field name="header_line" eval="False"/>
         <field name="header_spacing">20</field>
         <field name="dpi">90</field>
